# lazy-notes

./: .env.example  .gitignore  CHANGELOG.md  ENHANCED_README.md  I finetuned Llama 3.md  README.md  analyze_jsonl.py  config.py  config_template.py  create_simple_dataset.py  create_splits.py  enhanced_processor.py  main.py  merge_lora_to_hf.py  new_html_card.py  notes_browser.py  parakeet-app.py  pyproject.toml  requirement.txt  requirements.txt  switch_model.py
basic/: main.py
