[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-notes-transcribe"
version = "1.0.0"
description = "A local audio note transcription and processing system with dual model support"
readme = "README.md"
authors = [{name = "Bilawal Riaz"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["transcription", "whisper", "parakeet", "notes", "audio"]
dependencies = [
    "faster-whisper",
    "watchdog",
    "python-dotenv",
    "sqlite3",
    "requests"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/bilawalriaz/local-notes-transcribe"
Issues = "https://github.com/bilawalriaz/local-notes-transcribe/issues"
